--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
  * @since     Moodle 2.0
  */
 
-.path-mod-data-field form#editfield table.datafield_action tr.param8 td.c0 {
+.path-mod-data-field form#editfield table.datafield_action tr.argument td.c0 {
     padding-top: 10px;
     vertical-align: top;
 }
