datafield_action utilize central function to add labels and help icons in mustache template for this field type

--- a/templates/action.mustache
+++ b/templates/action.mustache
@@ -1,11 +1,11 @@
 <fieldset>
     {{> datafield_admin/basicfields }}
-    {{> mod_data/fields/requiredfield }}
 
     <!-- Template for actiontype field -->
     <div class="form-group row fitem">
         <div class="col-md-3">
-            <label for="param1" class="mb-0">{{#str}}actiontype, datafield_action{{/str}}</label>
+            <label for="param1" class="mb-0">{{param1_label}}</label>
+            {{#param1_helpicon}}{{{param1_helpicon}}}{{/param1_helpicon}}
         </div>
         <div class="col-md-9 form-inline align-items-start felement">
             <select id="param1" class="select custom-select form-control" name="param1">
@@ -19,7 +19,8 @@
     <!-- Template for actiontime field -->
     <div class="form-group row fitem">
         <div class="col-md-3">
-            <label for="param2" class="mb-0">{{#str}}actiontime, datafield_action{{/str}}</label>
+            <label for="param2" class="mb-0">{{param2_label}}</label>
+            {{#param2_helpicon}}{{{param2_helpicon}}}{{/param2_helpicon}}
         </div>
         <div class="col-md-9 form-inline align-items-start felement">
             <select id="param2" class="select custom-select form-control" name="param2">
@@ -33,7 +34,8 @@
     <!-- Template for argument1 field -->
     <div class="form-group row fitem">
         <div class="col-md-3">
-            <label for="param3" class="mb-0">{{#str}}argument, datafield_action, 1{{/str}}</label>
+            <label for="param3" class="mb-0">{{param3_label}}</label>
+            {{#param3_helpicon}}{{{param3_helpicon}}}{{/param3_helpicon}}
         </div>
         <div class="col-md-9 form-inline align-items-start felement">
             <textarea id="id_param3" name="param3" class="widetext" rows="2">{{param3}}</textarea>
@@ -43,7 +45,8 @@
     <!-- Template for argument2 field -->
     <div class="form-group row fitem">
         <div class="col-md-3">
-            <label for="param4" class="mb-0">{{#str}}argument, datafield_action, 2{{/str}}</label>
+            <label for="param4" class="mb-0">{{param4_label}}</label>
+            {{#param4_helpicon}}{{{param4_helpicon}}}{{/param4_helpicon}}
         </div>
         <div class="col-md-9 form-inline align-items-start felement">
             <textarea id="id_param4" name="param4" class="widetext" rows="2">{{param4}}</textarea>
@@ -53,7 +56,8 @@
     <!-- Template for argument3 field -->
     <div class="form-group row fitem">
         <div class="col-md-3">
-            <label for="param5" class="mb-0">{{#str}}argument, datafield_action, 3{{/str}}</label>
+            <label for="param5" class="mb-0">{{param5_label}}</label>
+            {{#param5_helpicon}}{{{param5_helpicon}}}{{/param5_helpicon}}
         </div>
         <div class="col-md-9 form-inline align-items-start felement">
             <textarea id="id_param5" name="param5" class="widetext" rows="2">{{param5}}</textarea>
